Octo training/deployment/test-deployment-quota.yaml
# deployment/test-deployment-quota.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: metrics-app
spec:
  replicas: 12
  selector:
    matchLabels:
      app: metrics-app
  template:
    metadata:
      labels:
        app: metrics-app
    spec:
      containers:
      - name: metrics-app
        image: arnaudmz/metrics-app:1.6
