Octo training/deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: kubernetes-app
  name: kubernetes-app
  namespace: gula
spec:
  ports:
  - port: 8000
    protocol: TCP
    targetPort: 8000
  selector:
    app: kubernetes-app
  type: NodePort
